// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusBadge Legacy weight: regular tone: error renders correctly 1`] = `
<div>
  <div
    class="css-1kwau38-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Error"
      class="css-1w78ld0-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.7525 1.79686C16.5646 1.6069 16.3086 1.5 16.0414 1.5H8.04987C7.78544 1.5 7.53178 1.60473 7.34437 1.79128L1.79451 7.31592C1.60598 7.50359 1.5 7.75863 1.5 8.02464V15.8844C1.5 16.1478 1.60386 16.4005 1.78903 16.5877L7.34344 22.2032C7.53128 22.3931 7.7873 22.5 8.05441 22.5H15.9501C16.2146 22.5 16.4682 22.3953 16.6556 22.2087L22.2055 16.6841C22.394 16.4964 22.5 16.2414 22.5 15.9754V8.02003C22.5 7.75675 22.3962 7.5041 22.2111 7.31689L16.7525 1.79686Z"
      />
      <path
        d="M8 16L16 8"
      />
      <path
        d="M16 16L8 8"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge Legacy weight: regular tone: info renders correctly 1`] = `
<div>
  <div
    class="css-d0fvsj-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Information"
      class="css-1fy6eq9-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10ZM12 17v-6M12 7h.01"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge Legacy weight: regular tone: neutral renders correctly 1`] = `
<div>
  <div
    class="css-1o4iv6m-boxStyles-StatusBadge"
  >
    <div
      class="css-1fa9oau-boxStyles-icon"
    />
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge Legacy weight: regular tone: success renders correctly 1`] = `
<div>
  <div
    class="css-1yao3c9-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Success"
      class="css-vvfklf-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
      />
      <path
        d="m7 13 3 3 7-7"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge Legacy weight: regular tone: warning renders correctly 1`] = `
<div>
  <div
    class="css-1t5js0n-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Warning"
      class="css-15hefj6-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 22h18c.7 0 1.2-.8.9-1.5l-9-17.8c-.4-.7-1.4-.7-1.8 0l-9 17.8c-.3.7.2 1.5.9 1.5ZM12 14V9m0 9h0"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge Legacy weight: subtle tone: error renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Error"
      class="css-1w78ld0-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.7525 1.79686C16.5646 1.6069 16.3086 1.5 16.0414 1.5H8.04987C7.78544 1.5 7.53178 1.60473 7.34437 1.79128L1.79451 7.31592C1.60598 7.50359 1.5 7.75863 1.5 8.02464V15.8844C1.5 16.1478 1.60386 16.4005 1.78903 16.5877L7.34344 22.2032C7.53128 22.3931 7.7873 22.5 8.05441 22.5H15.9501C16.2146 22.5 16.4682 22.3953 16.6556 22.2087L22.2055 16.6841C22.394 16.4964 22.5 16.2414 22.5 15.9754V8.02003C22.5 7.75675 22.3962 7.5041 22.2111 7.31689L16.7525 1.79686Z"
      />
      <path
        d="M8 16L16 8"
      />
      <path
        d="M16 16L8 8"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge Legacy weight: subtle tone: info renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Information"
      class="css-1fy6eq9-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10ZM12 17v-6M12 7h.01"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge Legacy weight: subtle tone: neutral renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <div
      class="css-1fa9oau-boxStyles-icon"
    />
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge Legacy weight: subtle tone: success renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Success"
      class="css-vvfklf-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
      />
      <path
        d="m7 13 3 3 7-7"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge Legacy weight: subtle tone: warning renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Warning"
      class="css-15hefj6-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 22h18c.7 0 1.2-.8.9-1.5l-9-17.8c-.4-.7-1.4-.7-1.8 0l-9 17.8c-.3.7.2 1.5.9 1.5ZM12 14V9m0 9h0"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: regular tone: cannotStartLow renders correctly 1`] = `
<div>
  <div
    class="css-1o4iv6m-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: cannot start."
      class="css-16t9tz1-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10ZM7 12h10"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: regular tone: errorHigh renders correctly 1`] = `
<div>
  <div
    class="css-1kwau38-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: error."
      class="css-1w78ld0-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.4661 0.5C16.7332 0.5 16.9893 0.6069 17.1771 0.796862L23.2111 6.89871C23.3962 7.08591 23.5 7.33857 23.5 7.60185V16.3935C23.5 16.6595 23.394 16.9146 23.2055 17.1023L17.0712 23.2087C16.8838 23.3953 16.6301 23.5 16.3657 23.5H7.63889C7.37177 23.5 7.11576 23.3931 6.92792 23.2032L0.789033 16.9968C0.60386 16.8095 0.5 16.5569 0.5 16.2935V7.60646C0.5 7.34045 0.605983 7.08541 0.794505 6.89774L6.92885 0.791284C7.11625 0.604732 7.36991 0.5 7.63434 0.5H16.4661ZM16.7071 7.29289C17.0976 7.68342 17.0976 8.31658 16.7071 8.70711L13.4142 12L16.7071 15.2929C17.0976 15.6834 17.0976 16.3166 16.7071 16.7071C16.3166 17.0976 15.6834 17.0976 15.2929 16.7071L12 13.4142L8.70711 16.7071C8.31658 17.0976 7.68342 17.0976 7.29289 16.7071C6.90237 16.3166 6.90237 15.6834 7.29289 15.2929L10.5858 12L7.29289 8.70711C6.90237 8.31658 6.90237 7.68342 7.29289 7.29289C7.68342 6.90237 8.31658 6.90237 8.70711 7.29289L12 10.5858L15.2929 7.29289C15.6834 6.90237 16.3166 6.90237 16.7071 7.29289Z"
        fill="currentColor"
        stroke="none"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: regular tone: errorLow renders correctly 1`] = `
<div>
  <div
    class="css-1o4iv6m-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: error."
      class="css-16t9tz1-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m16 8-4 4m0 0-4 4m4-4L8 8m4 4 4 4m6-4c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: regular tone: errorMedium renders correctly 1`] = `
<div>
  <div
    class="css-1kwau38-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: error."
      class="css-1w78ld0-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.7525 1.79686C16.5646 1.6069 16.3086 1.5 16.0414 1.5H8.04987C7.78544 1.5 7.53178 1.60473 7.34437 1.79128L1.79451 7.31592C1.60598 7.50359 1.5 7.75863 1.5 8.02464V15.8844C1.5 16.1478 1.60386 16.4005 1.78903 16.5877L7.34344 22.2032C7.53128 22.3931 7.7873 22.5 8.05441 22.5H15.9501C16.2146 22.5 16.4682 22.3953 16.6556 22.2087L22.2055 16.6841C22.394 16.4964 22.5 16.2414 22.5 15.9754V8.02003C22.5 7.75675 22.3962 7.5041 22.2111 7.31689L16.7525 1.79686Z"
      />
      <path
        d="M8 16L16 8"
      />
      <path
        d="M16 16L8 8"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: regular tone: inProgressLow renders correctly 1`] = `
<div>
  <div
    class="css-1o4iv6m-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: in progress."
      class="css-16t9tz1-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.5 13.5C7.32843 13.5 8 12.8284 8 12C8 11.1716 7.32843 10.5 6.5 10.5C5.67157 10.5 5 11.1716 5 12C5 12.8284 5.67157 13.5 6.5 13.5Z"
        fill="currentColor"
        stroke="none"
      />
      <path
        d="M12 13.5C12.8284 13.5 13.5 12.8284 13.5 12C13.5 11.1716 12.8284 10.5 12 10.5C11.1716 10.5 10.5 11.1716 10.5 12C10.5 12.8284 11.1716 13.5 12 13.5Z"
        fill="currentColor"
        stroke="none"
      />
      <path
        d="M17.5 13.5C18.3284 13.5 19 12.8284 19 12C19 11.1716 18.3284 10.5 17.5 10.5C16.6716 10.5 16 11.1716 16 12C16 12.8284 16.6716 13.5 17.5 13.5Z"
        fill="currentColor"
        stroke="none"
      />
      <path
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: regular tone: infoHigh renders correctly 1`] = `
<div>
  <div
    class="css-d0fvsj-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: information."
      class="css-1fy6eq9-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 1C5.9 1 1 5.9 1 12C1 18.1 5.9 23 12 23C18.1 23 23 18.1 23 12C23 5.9 18.1 1 12 1ZM12 18C11.4477 18 11 17.5523 11 17V11C11 10.4477 11.4477 10 12 10C12.5523 10 13 10.4477 13 11V17C13 17.5523 12.5523 18 12 18ZM12 8C12.5523 8 13 7.55228 13 7C13 6.44772 12.5523 6 12 6C11.4477 6 11 6.44772 11 7C11 7.55228 11.4477 8 12 8Z"
        fill="currentColor"
        stroke="none"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: regular tone: infoLow renders correctly 1`] = `
<div>
  <div
    class="css-1o4iv6m-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: information."
      class="css-16t9tz1-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10ZM12 17v-6M12 7h.01"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: regular tone: infoMedium renders correctly 1`] = `
<div>
  <div
    class="css-d0fvsj-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: information."
      class="css-1fy6eq9-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10ZM12 17v-6M12 7h.01"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: regular tone: notStartedLow renders correctly 1`] = `
<div>
  <div
    class="css-1o4iv6m-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: not started."
      class="css-16t9tz1-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
        stroke-dasharray="4 4"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: regular tone: pausedLow renders correctly 1`] = `
<div>
  <div
    class="css-1o4iv6m-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: paused."
      class="css-16t9tz1-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10 16V8m4 8V8m8 4c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: regular tone: successHigh renders correctly 1`] = `
<div>
  <div
    class="css-1yao3c9-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: success."
      class="css-vvfklf-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 24C18.6274 24 24 18.6274 24 12C24 5.37258 18.6274 0 12 0C5.37258 0 0 5.37258 0 12C0 18.6274 5.37258 24 12 24ZM17.7071 9.70711C18.0976 9.31658 18.0976 8.68342 17.7071 8.29289C17.3166 7.90237 16.6834 7.90237 16.2929 8.29289L10 14.5858L7.70711 12.2929C7.31658 11.9024 6.68342 11.9024 6.29289 12.2929C5.90237 12.6834 5.90237 13.3166 6.29289 13.7071L9.29289 16.7071C9.68342 17.0976 10.3166 17.0976 10.7071 16.7071L17.7071 9.70711Z"
        fill="currentColor"
        stroke="none"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: regular tone: successLow renders correctly 1`] = `
<div>
  <div
    class="css-1o4iv6m-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: success."
      class="css-16t9tz1-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
      />
      <path
        d="m7 13 3 3 7-7"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: regular tone: successMedium renders correctly 1`] = `
<div>
  <div
    class="css-1yao3c9-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: success."
      class="css-vvfklf-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
      />
      <path
        d="m7 13 3 3 7-7"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: regular tone: unknownLow renders correctly 1`] = `
<div>
  <div
    class="css-1o4iv6m-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: help."
      class="css-16t9tz1-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9.08984 8.99959C9.32495 8.33126 9.789 7.7677 10.3998 7.40873C11.0106 7.04975 11.7287 6.91853 12.427 7.0383C13.1253 7.15808 13.7587 7.52112 14.2149 8.06312C14.6712 8.60512 14.9209 9.29111 14.9198 9.99959C14.9198 11.9996 11.9198 12.9996 11.9198 12.9996M12 17H12.01M12 2C9.34784 2 6.8043 3.05357 4.92893 4.92893C3.05357 6.8043 2 9.34784 2 12C2 14.6522 3.05357 17.1957 4.92893 19.0711C6.8043 20.9464 9.34784 22 12 22C14.6522 22 17.1957 20.9464 19.0711 19.0711C20.9464 17.1957 22 14.6522 22 12C22 9.34784 20.9464 6.8043 19.0711 4.92893C17.1957 3.05357 14.6522 2 12 2Z"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: regular tone: warningHigh renders correctly 1`] = `
<div>
  <div
    class="css-1t5js0n-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: warning."
      class="css-15hefj6-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m23.1 20.1-9.3-18C13.4 1.4 12.7 1 12 1s-1.4.4-1.8 1.1l-9.3 18c-.3.6-.3 1.4.1 2 .4.6 1 1 1.7 1h18.7c.7 0 1.31-.33 1.7-1 .36-.6.3-1.4 0-2ZM12 19c-.6 0-1-.4-1-1s.4-1 1-1 1 .4 1 1-.4 1-1 1Zm1-5c0 .6-.4 1-1 1s-1-.4-1-1V9c0-.6.4-1 1-1s1 .4 1 1v5Z"
        fill="currentColor"
        stroke="none"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: regular tone: warningLow renders correctly 1`] = `
<div>
  <div
    class="css-1o4iv6m-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: warning."
      class="css-16t9tz1-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 7v6m0 4h-.01M2 12C2 6.477 6.477 2 12 2s10 4.477 10 10-4.477 10-10 10S2 17.523 2 12Z"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: regular tone: warningMedium renders correctly 1`] = `
<div>
  <div
    class="css-1t5js0n-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: warning."
      class="css-15hefj6-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 22h18c.7 0 1.2-.8.9-1.5l-9-17.8c-.4-.7-1.4-.7-1.8 0l-9 17.8c-.3.7.2 1.5.9 1.5ZM12 14V9m0 9h0"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: subtle tone: cannotStartLow renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: cannot start."
      class="css-16t9tz1-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10ZM7 12h10"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: subtle tone: errorHigh renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: error."
      class="css-1w78ld0-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.4661 0.5C16.7332 0.5 16.9893 0.6069 17.1771 0.796862L23.2111 6.89871C23.3962 7.08591 23.5 7.33857 23.5 7.60185V16.3935C23.5 16.6595 23.394 16.9146 23.2055 17.1023L17.0712 23.2087C16.8838 23.3953 16.6301 23.5 16.3657 23.5H7.63889C7.37177 23.5 7.11576 23.3931 6.92792 23.2032L0.789033 16.9968C0.60386 16.8095 0.5 16.5569 0.5 16.2935V7.60646C0.5 7.34045 0.605983 7.08541 0.794505 6.89774L6.92885 0.791284C7.11625 0.604732 7.36991 0.5 7.63434 0.5H16.4661ZM16.7071 7.29289C17.0976 7.68342 17.0976 8.31658 16.7071 8.70711L13.4142 12L16.7071 15.2929C17.0976 15.6834 17.0976 16.3166 16.7071 16.7071C16.3166 17.0976 15.6834 17.0976 15.2929 16.7071L12 13.4142L8.70711 16.7071C8.31658 17.0976 7.68342 17.0976 7.29289 16.7071C6.90237 16.3166 6.90237 15.6834 7.29289 15.2929L10.5858 12L7.29289 8.70711C6.90237 8.31658 6.90237 7.68342 7.29289 7.29289C7.68342 6.90237 8.31658 6.90237 8.70711 7.29289L12 10.5858L15.2929 7.29289C15.6834 6.90237 16.3166 6.90237 16.7071 7.29289Z"
        fill="currentColor"
        stroke="none"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: subtle tone: errorLow renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: error."
      class="css-16t9tz1-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m16 8-4 4m0 0-4 4m4-4L8 8m4 4 4 4m6-4c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: subtle tone: errorMedium renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: error."
      class="css-1w78ld0-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.7525 1.79686C16.5646 1.6069 16.3086 1.5 16.0414 1.5H8.04987C7.78544 1.5 7.53178 1.60473 7.34437 1.79128L1.79451 7.31592C1.60598 7.50359 1.5 7.75863 1.5 8.02464V15.8844C1.5 16.1478 1.60386 16.4005 1.78903 16.5877L7.34344 22.2032C7.53128 22.3931 7.7873 22.5 8.05441 22.5H15.9501C16.2146 22.5 16.4682 22.3953 16.6556 22.2087L22.2055 16.6841C22.394 16.4964 22.5 16.2414 22.5 15.9754V8.02003C22.5 7.75675 22.3962 7.5041 22.2111 7.31689L16.7525 1.79686Z"
      />
      <path
        d="M8 16L16 8"
      />
      <path
        d="M16 16L8 8"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: subtle tone: inProgressLow renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: in progress."
      class="css-16t9tz1-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.5 13.5C7.32843 13.5 8 12.8284 8 12C8 11.1716 7.32843 10.5 6.5 10.5C5.67157 10.5 5 11.1716 5 12C5 12.8284 5.67157 13.5 6.5 13.5Z"
        fill="currentColor"
        stroke="none"
      />
      <path
        d="M12 13.5C12.8284 13.5 13.5 12.8284 13.5 12C13.5 11.1716 12.8284 10.5 12 10.5C11.1716 10.5 10.5 11.1716 10.5 12C10.5 12.8284 11.1716 13.5 12 13.5Z"
        fill="currentColor"
        stroke="none"
      />
      <path
        d="M17.5 13.5C18.3284 13.5 19 12.8284 19 12C19 11.1716 18.3284 10.5 17.5 10.5C16.6716 10.5 16 11.1716 16 12C16 12.8284 16.6716 13.5 17.5 13.5Z"
        fill="currentColor"
        stroke="none"
      />
      <path
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: subtle tone: infoHigh renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: information."
      class="css-1fy6eq9-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 1C5.9 1 1 5.9 1 12C1 18.1 5.9 23 12 23C18.1 23 23 18.1 23 12C23 5.9 18.1 1 12 1ZM12 18C11.4477 18 11 17.5523 11 17V11C11 10.4477 11.4477 10 12 10C12.5523 10 13 10.4477 13 11V17C13 17.5523 12.5523 18 12 18ZM12 8C12.5523 8 13 7.55228 13 7C13 6.44772 12.5523 6 12 6C11.4477 6 11 6.44772 11 7C11 7.55228 11.4477 8 12 8Z"
        fill="currentColor"
        stroke="none"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: subtle tone: infoLow renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: information."
      class="css-16t9tz1-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10ZM12 17v-6M12 7h.01"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: subtle tone: infoMedium renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: information."
      class="css-1fy6eq9-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10ZM12 17v-6M12 7h.01"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: subtle tone: notStartedLow renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: not started."
      class="css-16t9tz1-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
        stroke-dasharray="4 4"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: subtle tone: pausedLow renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: paused."
      class="css-16t9tz1-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10 16V8m4 8V8m8 4c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: subtle tone: successHigh renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: success."
      class="css-vvfklf-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 24C18.6274 24 24 18.6274 24 12C24 5.37258 18.6274 0 12 0C5.37258 0 0 5.37258 0 12C0 18.6274 5.37258 24 12 24ZM17.7071 9.70711C18.0976 9.31658 18.0976 8.68342 17.7071 8.29289C17.3166 7.90237 16.6834 7.90237 16.2929 8.29289L10 14.5858L7.70711 12.2929C7.31658 11.9024 6.68342 11.9024 6.29289 12.2929C5.90237 12.6834 5.90237 13.3166 6.29289 13.7071L9.29289 16.7071C9.68342 17.0976 10.3166 17.0976 10.7071 16.7071L17.7071 9.70711Z"
        fill="currentColor"
        stroke="none"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: subtle tone: successLow renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: success."
      class="css-16t9tz1-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
      />
      <path
        d="m7 13 3 3 7-7"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: subtle tone: successMedium renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: success."
      class="css-vvfklf-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
      />
      <path
        d="m7 13 3 3 7-7"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: subtle tone: unknownLow renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: help."
      class="css-16t9tz1-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9.08984 8.99959C9.32495 8.33126 9.789 7.7677 10.3998 7.40873C11.0106 7.04975 11.7287 6.91853 12.427 7.0383C13.1253 7.15808 13.7587 7.52112 14.2149 8.06312C14.6712 8.60512 14.9209 9.29111 14.9198 9.99959C14.9198 11.9996 11.9198 12.9996 11.9198 12.9996M12 17H12.01M12 2C9.34784 2 6.8043 3.05357 4.92893 4.92893C3.05357 6.8043 2 9.34784 2 12C2 14.6522 3.05357 17.1957 4.92893 19.0711C6.8043 20.9464 9.34784 22 12 22C14.6522 22 17.1957 20.9464 19.0711 19.0711C20.9464 17.1957 22 14.6522 22 12C22 9.34784 20.9464 6.8043 19.0711 4.92893C17.1957 3.05357 14.6522 2 12 2Z"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: subtle tone: warningHigh renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: warning."
      class="css-15hefj6-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m23.1 20.1-9.3-18C13.4 1.4 12.7 1 12 1s-1.4.4-1.8 1.1l-9.3 18c-.3.6-.3 1.4.1 2 .4.6 1 1 1.7 1h18.7c.7 0 1.31-.33 1.7-1 .36-.6.3-1.4 0-2ZM12 19c-.6 0-1-.4-1-1s.4-1 1-1 1 .4 1 1-.4 1-1 1Zm1-5c0 .6-.4 1-1 1s-1-.4-1-1V9c0-.6.4-1 1-1s1 .4 1 1v5Z"
        fill="currentColor"
        stroke="none"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: subtle tone: warningLow renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: warning."
      class="css-16t9tz1-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 7v6m0 4h-.01M2 12C2 6.477 6.477 2 12 2s10 4.477 10 10-4.477 10-10 10S2 17.523 2 12Z"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: subtle tone: warningMedium renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: warning."
      class="css-15hefj6-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 22h18c.7 0 1.2-.8.9-1.5l-9-17.8c-.4-.7-1.4-.7-1.8 0l-9 17.8c-.3.7.2 1.5.9 1.5ZM12 14V9m0 9h0"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;
